[gd_scene load_steps=7 format=3 uid="uid://cuftgop3em15b"]

[ext_resource type="Script" path="res://Enemies/Enemy.gd" id="1_btom3"]
[ext_resource type="Texture2D" uid="uid://c3wsaq2vlx10p" path="res://Assets/Sprites/Characters/keycap_base_single.png" id="2_12ap8"]
[ext_resource type="Texture2D" uid="uid://cry6t0ethgshe" path="res://Assets/HUD/health_under.png" id="3_0xpnu"]
[ext_resource type="Texture2D" uid="uid://bt2yr2o5sx06j" path="res://Assets/HUD/health_over.png" id="4_vpj74"]
[ext_resource type="Texture2D" uid="uid://bggxqm85qmfl1" path="res://Assets/HUD/health_progress.png" id="5_a1pup"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iwq7s"]
size = Vector2(37, 41)

[node name="Enemy" type="Area2D" groups=["Enemy"]]
scale = Vector2(0.45, 0.45)
script = ExtResource("1_btom3")

[node name="KeycapBaseSingle" type="Sprite2D" parent="."]
position = Vector2(0, -1.52588e-05)
scale = Vector2(0.33, 0.33)
texture = ExtResource("2_12ap8")

[node name="Melee" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_iwq7s")

[node name="KeycapBar" type="TextureProgressBar" parent="."]
offset_left = -33.3333
offset_top = -42.2222
offset_right = 606.667
offset_bottom = 21.7778
scale = Vector2(0.1, 0.2)
max_value = 3.0
value = 3.0
texture_under = ExtResource("3_0xpnu")
texture_over = ExtResource("4_vpj74")
texture_progress = ExtResource("5_a1pup")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
